fix body overflow

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,7 +12,6 @@
 
 body {
   min-width: 300px;
-  overflow: hidden;
   background-color: #FADC89;
 }
 
